# learning

./: .gitignore  README.md
asm/: hello.asm  readme.md
cmake/: .cmake-format.py  CMakeLists.txt
cpp/: CMakeLists.txt  generate.bat  vc14-x64.bat  vc15-x32.bat
cpp/sockets/: Basics.h  CMakeLists.txt  Platform.h  main.cpp
cpp/sockets/test/: BasicsTest.cpp
cpp/src/boost/: CMakeLists.txt  main.cpp
cpp/src/boost-stuff/: CMakeLists.txt  main.cpp
cpp/src/sockets/: CMakeLists.txt
cpp/src/sockets/beej/tcp/: client.c
cpp/src/tanenbaum/: CMakeLists.txt  ProducerConsumer.cpp  main.cpp
cpp/vc/: generate.bat  vc14-x32.bat  vc15-x64.bat
nodejs/: run.js
nodejs/static/: app.js
python/: cheatsheet.py  run.py
python/hackerrank/: decorator.py  product.py  re-start-re-end.py
python/programiz/examples/: 03-square-root.py  04-triangle-area.py  05-quadratic-roots.py  14-prime.py  15-print-primes.py  16-factorial.py  17-multiplication-table.py  46-hash.py
